# seeklet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
src/seeklet/: __init__.py  __main__.py  cli.py  config.py  crawl.py  extract.py  index.py  models.py  normalize.py  ranking.py  search.py  snippet.py  storage.py
tests/: test_cli.py  test_cli_integration.py  test_crawl.py  test_extract.py  test_index_search.py  test_normalize.py  test_package.py  test_ranking.py  test_snippet.py
