[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "seeklet"
version = "0.1.0"
description = "A minimal educational web search engine in Python."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name"},
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[project.scripts]
seeklet = "seeklet.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/seeklet"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 79
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
